filestruct/test_data/bad_code/struct_unit.stderr
error: FromDir only supports named fields
 --> test_data/bad_code/struct_unit.rs
  |
  |     struct F;
  |            ^
