filestruct/test_data/bad_code/struct_unit.rs
use filestruct::FromDir;

fn main() {
    #[allow(dead_code)]
    #[derive(FromDir)]
    struct F;
}
